# zklibreports

./: .gitignore  .medusa-artifact-hash  README.md  ROADMAP.md  circuit.civer  circuit_initial_constraints.json  circuit_structure.json  slither_results.json
artifacts/: git-sync-status.txt
artifacts/cargo-audit/: arkworks-algebra.json  arkworks-curves.json  arkworks-groth16.json  arkworks-marlin.json  bellman.json  circom.json
artifacts/cargo-deny/: arkworks-algebra.txt  arkworks-curves.txt  arkworks-groth16.txt  arkworks-marlin.txt  bellman.txt  circom.txt
artifacts/cargo-geiger/: arkworks-algebra.txt
artifacts/cppcheck/: libsnark-deep.xml
artifacts/gitleaks/: gnark.json  snarkjs.json
artifacts/gosec/: gnark-gosec-focused.json  gnark-gosec.json
artifacts/govulncheck/: gnark.json
artifacts/npm-audit/: snarkjs-full.json  snarkjs-omit-dev.json
artifacts/proof/: arkworks-curves-rustsec-2025-0055-proof.txt  arkworks-marlin-rustsec-2025-0055-proof.txt  rustsec-2025-0055-patched-output-clean.txt  tmp-vuln.txt  (+1 more)
crytic-export/: combined_solc.json
docs/: METHODOLOGY.md  PROOF_BAR.md  RULES.md  TOOLS.md
proof_harness/cat2_zkevm_circuits_f1_decode_bytes_panic/: Cargo.toml
proof_harness/cat2_zkevm_circuits_f1_decode_bytes_panic/src/: lib.rs
scripts/: anvil.ps1  audit_cat1_bridges.ps1  audit_cat2_rollups.ps1  cast.ps1  cbmc.ps1  chisel.ps1  codeql.ps1  echidna.ps1  evm_specialist_campaign.ps1  forge.ps1  grype.ps1  medusa.ps1  semgrep.ps1  snarkjs.ps1  syft.ps1  z3.ps1  zkfuzz.ps1
tmp/: BridgeRouter.sol  TokenRegistry.sol  slither_help.txt
(+1075 files in other folders)
